--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <button class="tab-btn active" data-tab="upgrades">Upgrades</button>
             <button class="tab-btn" data-tab="store">Store</button>
             <button class="tab-btn" data-tab="achievements">Achievements</button>
+            <button class="tab-btn" data-tab="leaderboard">Leaderboard</button>
         </div>
 
         <div id="upgrades" class="tab-content active">
@@ -55,6 +56,11 @@
         <div id="achievements" class="tab-content">
             <h2>Milestones</h2>
             <ul id="achievements-list"></ul>
+        </div>
+
+        <div id="leaderboard" class="tab-content">
+            <h2>Top Agents</h2>
+            <ul id="leaderboard-list"></ul>
         </div>
     </div>
     <div id="particles-container"></div>
